ui: add floating navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@
 .dark {
   --background: #252525;
   --foreground: #fbfbfb;
-  --card: #343434;
+  --card: # ;
   --card-foreground: #fbfbfb;
   --popover: #343434;
   --popover-foreground: #fbfbfb;
